--- a/macmillantimesstyle.css
+++ b/macmillantimesstyle.css
@@ -227,6 +227,7 @@
         margin-right: 500px;
         padding-bottom: 50px;
         padding-left: 0px;
+        align: top Right;
     }
 
     .linklisthead
